--- a/AcornProject_PG12/.project
+++ b/AcornProject_PG12/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AcornProject_PG12</name>
+	<name>AcornProject_PG</name>
 	<comment></comment>
 	<projects>
 	</projects>
